<resources>
    <string name="app_name">MuscularStrength</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="month_txt">FOR ONLY $7.99 A MONTH</string>
    <string name="signUp">SIGN UP</string>
    <string name="p_member">for a platinum membership today</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="remeber">Remember Me</string>
    <string name="forget_txt">Forgot Password?</string>
    <string name="signup_txt">No Account?</string>
    <string name="dots">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .  . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . </string>
    <string name="copyright">Copyright © MuscularStrength.com\n All Rights Reserved.</string>
    <string name="more_option">More Options</string>
    <string name="hide_option">Hide Options</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="article">Articles</string>
    <string name="workout">Workouts</string>
    <string name="recipe">Recipes</string>
    <string name="forum">Forums</string>
    <string name="exclusive">Exclusive</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="story">Story</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="routines">Routines</string>
    <string name="meal_plan">Meal plan</string>
    <string name="lifts">Lifts</string>
    <string name="progress">Progress</string>
    <string name="board">Board</string>
    <string name="hint_article">Search our Articles</string>
    <string name="hint_forum">Search</string>
    <string name="my_post">My Post</string>
    <string name="todays_post">Todays Post</string>
    <string name="past_post">Past Post</string>
    <string name="view_content">VIEW MY CONTENTS</string>
    <string name="personal">Personal Information</string>
    <string name="upload_pic">Upload New Profile Pic</string>
    <string name="browse">Browse</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="findfriend">Find Friends</string>
    <string name="earnpoints">Earn Points</string>
    <string name="addexercise">Add an exercise/routine</string>
    <string name="plusadd">+ ADD</string>
    <string name="settings">Settings</string>
    <string name="addVideo">Add Video</string>
    <string name="filter">Filter</string>
    <string name="update">Update</string>
    <string name="like">Like</string>
    <string name="createalbum">Create Album</string>
    <string name="addexist">Add to Existing Album</string>
    <string name="albumName">Album Name</string>
    <string name="albumcaption">Add a caption...</string>
    <string name="uploadimage">Upload Images</string>
    <string name="browseimg">BROWSE IMAGE</string>
    <string name="membershipoption">Membership Options</string>
    <string name="verify_mem">Verify Your Membership Type</string>
    <string name="create_cust">Create Customized Profile</string>
    <string name="submit_con">Submit Content to Be Posted on the Site</string>
    <string name="become_aff">Become An Affiliate</string>
    <string name="participate">Participate in the Forum</string>
    <string name="enter_cont">Enter Contests &amp; Challenges</string>
    <string name="ask_ques">Ask Questions &amp; Post Comments</string>
    <string name="account_info"> Account Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="refrel">Referral? USERNAME only</string>
    <string name="address">Address</string>
    <string name="hint_address">Address:</string>
    <string name="hint_city">City:</string>
    <string name="hint_state">State:</string>
    <string name="hint_zip">Zip:</string>
    <string name="verification">Verification</string>
    <string name="security_txt">For Security, please enter the answer below.Numeric charcters only</string>
    <string name="hint_answer">Enter your answer here.</string>
    <string name="important_note">If you are using a PROMO CODE you still need to enter credit card information.After the promotional period, the credit card will automatically be charged for the next period. If you cancel your membership before the end of the promotional period,your membership will instantly downgrade to GOLD.</string>
<string name="hint_promo">Promo Code:</string>
    <string name="submitBtn">Submit</string>
    <string name="errorMessage">Error Occurs.</string>
</resources>
