<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/dash_bg"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/logo_dash"
        android:layout_width="@dimen/_120sdp"
        android:layout_alignParentTop="true"
        android:src="@drawable/landing_logo"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/_120sdp" />
    <EditText
        android:id="@+id/userName"
        android:layout_above="@+id/password"
       android:paddingLeft="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:hint="@string/hint_username"
        android:textSize="@dimen/_12sdp"
        android:background="@drawable/edittext_bg"
        android:layout_margin="@dimen/_5sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:textColorHint="@color/cat_color"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/icon_username"
        android:layout_height="@dimen/_50sdp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/cat_color"
        android:hint="@string/hint_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_above="@+id/center"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/icon_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="@dimen/_50sdp"
        />
    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/signinBtn"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:text="@string/sign_in"
        android:textSize="@dimen/_15sdp"
        android:background="@drawable/login_btn_bg"

        android:textColor="@color/white"
        android:layout_below="@+id/center"/>
    <RelativeLayout
        android:id="@+id/innerlayout"
        android:layout_below="@+id/signinBtn"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/checkbox"
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/icon_remember_me_deactive"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_height="@dimen/_25sdp" />
        <TextView
            android:id="@+id/remembertxt"
            android:layout_width="wrap_content"
            android:text="@string/remeber"
            android:textSize="@dimen/_12sdp"
           android:layout_toRightOf="@+id/checkbox"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

<TextView
    android:id="@+id/forgottxt"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_width="wrap_content"
    android:text="@string/forget_txt"
    android:textSize="@dimen/_12sdp"
    android:textColor="@color/white"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:id="@+id/dot_view"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/innerlayout"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:text="@string/dots"
        android:textColor="@color/white"
        android:textSize="@dimen/_5sdp"
        android:layout_height="@dimen/_10sdp"/>
    <RelativeLayout
        android:id="@+id/innerlayout1"
        android:layout_below="@+id/dot_view"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:text="@string/signup_txt"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content" />
        </RelativeLayout>
    <TextView
        android:id="@+id/dot_view1"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/innerlayout1"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:textColor="@color/white"
        android:text="@string/dots"
        android:textSize="@dimen/_5sdp"
        android:layout_height="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/copyrighttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:alpha=".3"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>