<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/previous_txt"
            android:layout_width="wrap_content"
            android:text="@string/previous"
            android:layout_toRightOf="@+id/previous"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/centerView"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/next_txt"
            android:layout_width="wrap_content"
            android:text="@string/next"
            android:layout_toLeftOf="@+id/next"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:id="@+id/hideOptionBtn"
        android:background="@drawable/edittext_bg"
        android:layout_width="match_parent"
        android:text="@string/hide_option"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/copyrighttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_text"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_alignParentBottom="true"/>

</LinearLayout>