<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/my_post"
            android:layout_marginLeft="@dimen/padding_text"
            android:textColor="@color/red"
            android:padding="@dimen/_5sdp"
            android:text="@string/my_post"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/todays_post"
            android:textColor="@color/red"
            android:text="@string/todays_post"
            android:layout_width="0dp"
            android:padding="@dimen/_5sdp"
            android:gravity="start"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/past_post"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:drawableRight="@drawable/forum_calendar_icon"
            android:gravity="end|center_vertical"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/past_post"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/forum_search"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"
        android:hint="@string/hint_forum"
        android:textColorHint="@color/white"
        android:background="@drawable/rect_bg"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:layout_height="wrap_content" />
    <ExpandableListView
        android:id="@+id/list_forum"
        android:layout_width="match_parent"
        android:childDivider="@color/cat_color"
        android:divider="@color/cat_color"
        android:dividerHeight="1dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_text">
    </ExpandableListView>

</LinearLayout>